force-app/main/default/objects/KimbleOne__ExpenseItemTemplate__c/KimbleOne__ExpenseItemTemplate__c.object-meta.xml
<CustomObject>
    <label>Expense Item Template</label>
    <nameField>
        <label>Expense Item Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Item Templates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>