force-app/main/default/objects/KimbleOne__ExpenseItemTemplate__c/fields/KimbleOne__EndLocation__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EndLocation__c</fullName>
    <label>End Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>