force-app/main/default/objects/KimbleOne__ExpenseItemTemplate__c/fields/KimbleOne__ExpenseItemType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpenseItemType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Expense Item Type</label>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Expense Item Templates</relationshipLabel>
    <relationshipName>ExpenseItemTemplates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>