force-app/main/default/objects/KimbleOne__ExpenseItemTemplate__c/fields/KimbleOne__IncurredCurrencyGrossAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IncurredCurrencyGrossAmount__c</fullName>
    <label>Incurred Currency Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>