force-app/main/default/objects/KimbleOne__ExpenseItemTemplate__c/fields/KimbleOne__PeriodUnitType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PeriodUnitType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Frequency</label>
    <referenceTo>KimbleOne__UnitType__c</referenceTo>
    <relationshipName>ExpenseItemProfiles</relationshipName>
    <type>Lookup</type>
</CustomField>