force-app/main/default/objects/KimbleOne__ExpenseItemTemplate__c/fields/KimbleOne__ResourcedActivity__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourcedActivity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resourced Activity</label>
    <referenceTo>KimbleOne__ResourcedActivity__c</referenceTo>
    <relationshipName>ExpenseItemProfiles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>